syntax = "proto3";

option go_package = "./todo";

package pb;

import "google/api/annotations.proto";

service Todo {
    rpc AddTodo (AddTodoRequest) returns (BasicReply) {
        option (google.api.http) = {
            post: "/v1/todo/add"
            body: "*"
        };
    }
    rpc DeleteTodo (UpdateTodoRequest) returns (BasicReply) {
        option (google.api.http) = {
            put: "/v1/todo/delete"
            body: "*"
        };
    }
    rpc ListTodo (ListTodoRequest) returns (ListTodoReply) {
        option (google.api.http) = {
            get: "/v1/todo/list"
        };
    }
    rpc MarkTodo (UpdateTodoRequest) returns (BasicReply) {
        option (google.api.http) = {
            put: "/v1/todo/mark"
            body: "*"
        };
    }
    rpc Ping (EmptyRequest) returns (PingReply) {
        option (google.api.http) = {
            get: "/v1/todo/ping"
        };
    }
}

// requests
message AddTodoRequest {
    string userId = 1;
    string itemTitle = 2;
    string itemDescription = 3;
}

message UpdateTodoRequest {
    string userId = 1;
    string itemTitle = 2;
}

message ListTodoRequest {
    string userId = 1;
}

message EmptyRequest {}

// replies
message BasicReply {
    string userId = 1;
}

message TodoItem {
    int32 count = 1;
    string itemTitle = 2;
    string itemDescription = 3;
    bool completed = 4;
    string dateCreated = 5;
    string dateCompleted = 6;
}

message ListTodoReply {
    string userId = 1;
    TodoItem items = 2;
}

message PingReply {
    string pong = 1;
}